<resources>
    <string name="app_name">Battery GURU</string>
    <string name="title_activity_main">Battery GURU</string>
    <string name="package_name">com.guru.batteryoptimizer</string>
    <string name="custom_url_scheme">com.guru.batteryoptimizer</string>
    <string name="info_btn">Info</string>
    <string name="search_btn">Search</string>
    <string name="search_hint">Search options</string>
    <string name="search_type_to_search">Type something to search</string>
    <string name="search_no_results">No results found</string>
    <string name="dialog_progress">Progress:</string>
    <string name="dialog_btn_ok">Ok</string>
    <string name="dialog_btn_close">Close</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="device_soc_idle_mhz">Idle</string>
    <string name="checksloading_title">Loading...</string>
    <string name="checks_checkingrequirements">Checking requirements...</string>
    <string name="checks_checkingsettings">Checking settings...</string>
    <string name="checks_fatalroottitle">ROOT not detected</string>
    <string name="checks_fataltootmsg">App requires ROOT access to work!</string>
    <string name="checks_fataldevicetitle">Unsupported device</string>
    <string name="checks_fataldevicemsg">This device is not compatible with the App!</string>
    <string name="checks_appdisabledtitle">App disabled!</string>
    <string name="checks_appdisabledmsg">Battery GURU (BETA) app has been detected as installed.\nUninstall app to use it.</string>
    <string name="checks_fatalrootlosttitle">ROOT access lost</string>
    <string name="checks_fatalrootlostmsg">ROOT Access was lost!\nApp requires ROOT access to work!</string>
    <string name="checks_closeapp">Close app</string>
    <string name="updater_checkingupdatetitle">Checking update...</string>
    <string name="updater_checkingupdatemsg">Checking for available update...</string>
    <string name="updater_updateavailabletitle">Update available!</string>
    <string name="updater_updateavailablemsg">Version %1$s is available!\nCurrent version: %2$s\n\n%3$sPress on \'Update now\' to download update.</string>
    <string name="updater_updateavailablechangelog">Changelog:\n%1$s\n\n</string>
    <string name="updater_downloadingtitle">Downloading update...</string>
    <string name="updater_downloadcanceledtitle">Download canceled!</string>
    <string name="updater_downloadcanceledmsg">Download has been cancelled.</string>
    <string name="updater_installupdatetitle">Update ready to install!</string>
    <string name="updater_installupdatemsg">Update is ready!\nDo you want to install it now?\n\nNote: you can install it later.</string>
    <string name="updater_pendinginstallupdatemsg">Update is ready!\nDo you want to install it now?\n\nNote: you can install it later from About GURU &gt; Check for app update.</string>
    <string name="updater_installingtitle">Installing update...</string>
    <string name="updater_installingmsg">DON\'T close the app during update.\nApp will close after update.</string>
    <string name="updater_uptodatetitle">Up to date!</string>
    <string name="updater_uptodatemsg">You are now on the latest version.</string>
    <string name="updater_connectionerrortitle">Connection error!</string>
    <string name="updater_connectionerrormsg">Unable to connect to the server!\nPlease check your internet connection.</string>
    <string name="updater_downloaderrortitle">Download error!</string>
    <string name="updater_downloaderrormsg">Update couldn\'t be downloaded, please try again.</string>
    <string name="updater_installerrortitle">Update error!</string>
    <string name="updater_installerrormsg">Update couldn\'t be installed, please try again.</string>
    <string name="updater_whatsnewtitle">What\'s new!</string>
    <string name="updater_whatsnewhighlighted">Highlighted:</string>
    <string name="updater_whatsnewfooter">You can check the full changelog in About GURU &gt; Changelog.</string>
    <string name="updater_btn_notnow">Not now</string>
    <string name="updater_btn_updatenow">Update now</string>
    <string name="updater_btn_later">Later</string>
    <string name="updater_btn_installnow">Install now</string>
    <string name="device_toolbartitle">Device status</string>
    <string name="device_sep_cpu_usage">CPU usage</string>
    <string name="device_cpu_ecores">Efficiency cores</string>
    <string name="device_cpu_cores">Core</string>
    <string name="device_cpu_pcores">Performance cores</string>
    <string name="device_sep_gpu_usage">GPU usage</string>
    <string name="device_gpu_core">Cores</string>
    <string name="device_sep_memory_usage">Memory usage</string>
    <string name="device_option_show_memory">Show memory</string>
    <string name="device_spinner_show_memory_1">Memory in use</string>
    <string name="device_spinner_show_memory_2">Memory available</string>
    <string name="device_ramused_name">RAM used</string>
    <string name="device_swapused_name">ZRAM used</string>
    <string name="device_ramfree_name">RAM available</string>
    <string name="device_swapfree_name">ZRAM available</string>
    <string name="device_swapalgorithm_name">%1$s algorithm</string>
    <string name="device_sep_thermal_status">Thermal status</string>
    <string name="device_option_usefahrenheit">Use Fahrenheit unit</string>
    <string name="device_cputemp">CPU temperature</string>
    <string name="device_gputemp">GPU temperature</string>
    <string name="device_batterytemp">Battery temperature</string>
    <string name="device_sep_battery_status">Battery status</string>
    <string name="device_batterycap">Battery capacity</string>
    <string name="device_batteryhealth">Battery health</string>
    <string name="device_batterycycles">Cycles</string>
    <string name="device_batteryunknown">Unknown</string>
    <string name="device_infotitle">Device status info</string>
    <string name="device_infomsg">In this section, you can monitor and view the status of your device.\n\nCPU usage: here you can view real-time processor usage for each core, such as the current frequency or current usage percentage.\n\nGPU usage: here you can view real-time graphics processor usage, such as the current frequency or current usage percentage.\n\nMemory usage: here you can view the real-time RAM and ZRAM (virtual) memory usage, such as the current frequency or current usage percentage.\n\nThermal status: here you can view the temperature of the CPU, GPU, and battery.\n\nBattery status: here you can view the battery\'s capacity or health.</string>
    <string name="general_toolbartitle">General settings</string>
    <string name="general_sep_system">System settings</string>
    <string name="general_option_optimizeapps">Optimize all apps</string>
    <string name="general_option_battapps">Battery optimizations on apps</string>
    <string name="general_option_cachedapps">Freeze cached apps</string>
    <string name="general_sep_cpu">CPU settings</string>
    <string name="general_option_cpuhotplug">CPU hotplug optimizations</string>
    <string name="general_option_powereffi">Power efficient</string>
    <string name="general_option_thermal">Thermal optimizations</string>
    <string name="general_option_cpueffiboost">CPU efficiency boost</string>
    <string name="general_sep_gpu">GPU settings</string>
    <string name="general_option_gpueffiboost">GPU efficiency boost</string>
    <string name="general_sep_memory">Memory settings</string>
    <string name="general_option_swap">ZRAM optimizations</string>
    <string name="general_sep_storage">Storage settings</string>
    <string name="general_option_storage">Storage optimizations</string>
    <string name="general_sep_battery">Battery settings</string>
    <string name="general_option_batteryprotect">Battery charging protection</string>
    <string name="general_seekbar_battlimittitle">Battery charging limit</string>
    <string name="general_infotitle">General settings info</string>
    <string name="general_infomsg">This section contains settings that provide basic optimization options.\n\nSystem settings: this category offers options that are normally hidden from the user (It\'s recommended to leave default settings).\n\nCPU settings: this category offers options such as efficiency or heat management (It\'s recommended to leave default settings).\n\nGPU settings: this category offers options such as efficiency boost, etc. (It\'s recommended to leave default settings).\n\nMemory settings: this category offers options related to (ZRAM) virtual memory optimizations (It\'s recommended to leave default settings).\n\nStorage settings: this category offers settings to improve UFS energy efficiency (It\'s recommended to leave default settings).\n\nBattery settings: this category offers battery charging protection options, among others.</string>
    <string name="general_battprotectwarningtitle">Important!</string>
    <string name="general_battprotectwarningmsg">Make sure that battery protection on system is disabled to avoid conflicts/issues.\nYou can check this in Settings app &gt; Battery &gt; Battery protection.\n\nYou may need to re-plug the charger for the changes to take effect.</string>
    <string name="general_optimizeappstitle">Apps optimization notice!</string>
    <string name="general_optimizeappsmsg">It\'s recommended to optimize applications every two weeks or after performing major system updates, this helps improve both performance and battery efficiency on device.\n\nNote: device may heat up during optimization and process may take several minutes.</string>
    <string name="general_optimizingtitle">Optimizing all apps...</string>
    <string name="general_optimizingmsg">DON\'T close the app during optimization!\nThis process may take several minutes...</string>
    <string name="general_optimizingcanceledtitle">Apps optimization canceled!</string>
    <string name="general_optimizingcanceledmsg">Apps optimization has been canceled.</string>
    <string name="general_optimizedtitle">Apps optimized!</string>
    <string name="general_optimizedmsg">All apps have been optimized.</string>
    <string name="general_btn_optimizeapps">Optimize apps</string>
    <string name="advanced_toolbartitle">Advanced settings</string>
    <string name="advanced_warning">WARNING: touching these options without knowing what you are doing can cause INSTABILITY or FREEZE on your device, depending on frequency and/or undervoltage settings you are using and some frequencies may not work depending on the kernel you are using.</string>
    <string name="advanced_sep_freqs">Frequency settings</string>
    <string name="advanced_option_use_frq">Custom frequencies</string>
    <string name="advanced_option_maxlittle">Max little cores frequency</string>
    <string name="about_sep_about_battery_guru">About Battery GURU</string>
    <string name="about_appversion">App version</string>
    <string name="about_sep_devinfo">Developer info</string>
    <string name="about_developer">Developed by</string>
    <string name="about_github">Source</string>
    <string name="about_githubsummary">GitHub repository</string>
    <string name="about_sep_updates">Updates</string>
    <string name="about_option_changelog">Changelog</string>
    <string name="about_option_check_update">Check for app update</string>
    <string name="about_sep_importexport">Import/Export</string>
    <string name="about_option_import">Import settings</string>
    <string name="about_option_export">Export settings</string>
    <string name="about_sep_labs">Experimental</string>
    <string name="about_option_limitbackground">Background app process limit</string>
    <string name="about_option_forcedoze">Force Doze on device idle</string>
    <string name="about_option_nsd">Disable network service discovery</string>
    <string name="about_button_reset_settings">Reset settings to default</string>
</resources>