<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <!-- ====== System ====== -->
            <dev.oneuiproject.oneui.widget.Separator
                android:id="@+id/sep_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_sep_system"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_settings"/>
            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">
                <dev.oneuiproject.oneui.widget.CardItemView
                    android:id="@+id/optimizeapps_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_optimizeapps"/>
                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="?android:attr/listDivider"/>
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/battapps_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_battapps"/>
                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="?android:attr/listDivider"/>
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/cachedapps_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_cachedapps"/>
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

            <!-- ====== CPU ====== -->
            <dev.oneuiproject.oneui.widget.Separator
                android:id="@+id/sep_cpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_sep_cpu"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_cpu"/>
            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/cpu_hotplug_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_cpuhotplug"/>
                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="?android:attr/listDivider"/>
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/power_effi_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_powereffi"/>
                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="?android:attr/listDivider"/>
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/thermal_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_thermal"/>
                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="?android:attr/listDivider"/>
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/cpu_effiboost_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_cpueffiboost"/>
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

            <!-- ====== GPU ====== -->
            <dev.oneuiproject.oneui.widget.Separator
                android:id="@+id/sep_gpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_sep_gpu"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_gpu"/>
            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/gpu_effiboost_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_gpueffiboost"/>
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

            <!-- ====== Memory ====== -->
            <dev.oneuiproject.oneui.widget.Separator
                android:id="@+id/sep_memory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_sep_memory"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_memory"/>
            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/swap_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_swap"/>
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

            <!-- ====== Storage ====== -->
            <dev.oneuiproject.oneui.widget.Separator
                android:id="@+id/sep_storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_sep_storage"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_storage"/>
            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/storage_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_storage"/>
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

            <!-- ====== Battery ====== -->
            <dev.oneuiproject.oneui.widget.Separator
                android:id="@+id/sep_battery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_sep_battery"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_battery"/>
            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">
                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/batteryprotect_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:showBottomDivider="false"
                    app:title="@string/general_option_batteryprotect"/>
                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="?android:attr/listDivider"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="17dp"
                    android:paddingEnd="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="25dp">
                    <TextView
                        android:id="@+id/tvBattLimitTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/general_seekbar_battlimittitle"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/tvBattLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="14sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:paddingBottom="25dp"
                    android:gravity="center_vertical">
                    <ImageButton
                        android:id="@+id/btnBattLevelDown"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/oui_des_preference_seekbar_pro_btn_bg"
                        android:src="@drawable/ic_seekbar_minus"
                        android:scaleType="center"
                        android:contentDescription="Decrease"/>
                    <dev.oneuiproject.oneui.widget.SeekBarPlus
                        android:id="@+id/seekBarBattLevel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="95"
                        android:min="80"
                        android:progress="90"
                        app:centerBasedBar="false"
                        app:seamless="false"/>
                    <ImageButton
                        android:id="@+id/btnBattLevelUp"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/oui_des_preference_seekbar_pro_btn_bg"
                        android:src="@drawable/ic_seekbar_plus"
                        android:scaleType="center"
                        android:contentDescription="Increase"/>
                </LinearLayout>
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

            <dev.oneuiproject.oneui.widget.Separator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>